[gd_scene load_steps=6 format=3 uid="uid://dt3cxkoy1v53r"]

[ext_resource type="Script" path="res://LifeCounter.gd" id="1_ihaqm"]
[ext_resource type="Texture2D" uid="uid://bfuoxsp6dllew" path="res://art/nd_zapup_pulses-red-2.png" id="2_evs20"]
[ext_resource type="Texture2D" uid="uid://c5ssvh7715lqx" path="res://art/nd_zapup_pulses-red-3.png" id="3_0hs7r"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6bfxg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_evs20")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0hs7r")
}],
"loop": false,
"name": &"dim",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_vnfn5"]
font_size = 40

[node name="LifeCounter" type="Node2D"]
script = ExtResource("1_ihaqm")

[node name="Life1" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6bfxg")

[node name="Life2" type="AnimatedSprite2D" parent="."]
position = Vector2(100, 0)
sprite_frames = SubResource("SpriteFrames_6bfxg")

[node name="Life3" type="AnimatedSprite2D" parent="."]
position = Vector2(200, 0)
sprite_frames = SubResource("SpriteFrames_6bfxg")

[node name="Life4" type="AnimatedSprite2D" parent="."]
position = Vector2(300, 0)
sprite_frames = SubResource("SpriteFrames_6bfxg")

[node name="Life5" type="AnimatedSprite2D" parent="."]
position = Vector2(400, 0)
sprite_frames = SubResource("SpriteFrames_6bfxg")

[node name="Label" type="Label" parent="."]
offset_left = 50.0
offset_top = -88.0
offset_right = 350.0
offset_bottom = -33.0
text = "Beeps Available"
label_settings = SubResource("LabelSettings_vnfn5")
horizontal_alignment = 1
